--- a/package.json
+++ b/package.json
@@ -47,14 +47,15 @@
   },
   "dependencies": {
     "@clack/prompts": "^1.0.1",
-    "better-result": "^2.7.0"
+    "better-result": "^2.7.0",
+    "repo-updater": "^0.1.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.15",
+    "@biomejs/biome": "^2.4.2",
     "@changesets/cli": "^2.29.8",
     "@types/bun": "^1.3.9",
-    "@typescript/native-preview": "^7.0.0-dev.20260215.1",
+    "@typescript/native-preview": "^7.0.0-dev.20260217.1",
     "lefthook": "^2.1.1",
-    "ultracite": "^7.2.2"
+    "ultracite": "^7.2.3"
   }
 }
