--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^1.0.1",
-    "better-result": "^2.7.0",
-    "repo-updater": "^0.1.3"
+    "better-result": "^2.7.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.4.2",
