--- a/package.json
+++ b/package.json
@@ -50,11 +50,14 @@
     "better-result": "^2.7.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.4.2",
+    "@biomejs/biome": "^2.4.4",
     "@changesets/cli": "^2.29.8",
     "@types/bun": "^1.3.9",
-    "@typescript/native-preview": "^7.0.0-dev.20260217.1",
+    "@typescript/native-preview": "^7.0.0-dev.20260220.1",
     "lefthook": "^2.1.1",
     "ultracite": "^7.2.3"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1"
   }
 }
